--- a/RYT/appsettings.json
+++ b/RYT/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "default": "Server=;Database=RYTdb;Integrated Security=true;"
+  },
+  "EmailSettings": {
+    "SenderEmail": "devstutorialcenter@gmail.com",
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "AppPassword": "paupxarsuaiatsdc"
+  }
 }
