--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Server=;Database=RYTdb;Integrated Security=true;"
+    "default": "User ID=rytdb_user;Password=JNUjaqHwzX48WOkagighHkY1YKhU8WHO;Host=dpg-cmlr3t8l5elc73c79v40-a.oregon-postgres.render.com;Port=5432;Database=rytdb;Pooling=true;SSL Mode=Require;Trust Server Certificate=True;"
   },
   "EmailSettings": {
     "SenderEmail": "devstutorialcenter@gmail.com",
