--- a/RYT.csproj
+++ b/RYT.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="MimeKit" Version="4.3.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0" />
+    <PackageReference Include="Paystack.Net" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
