--- a/appsettings.json
+++ b/appsettings.json
@@ -14,5 +14,9 @@
     "Host": "smtp.gmail.com",
     "Port": 587,
     "AppPassword": "paupxarsuaiatsdc"
+  },
+  "Payment": {
+    "PayStack": "sk_test_0055a20846a5e1b520e0b2e8cc29a7d4b80fd6f6",
+    "CallBackUrl": "https://localhost:7238/sendreward"
   }
 }
