Cloudinary service commit

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,5 +14,10 @@
     "Host": "smtp.gmail.com",
     "Port": 587,
     "AppPassword": "paupxarsuaiatsdc"
+  },
+  "Cloudinary": {
+    "CloudName": "dvrghpls1",
+    "ApiKey": "227547715271435",
+    "ApiSecret": "xkNXWvhB7xb-amGWgvG56SZyW5Y"
   }
 }
